<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                             https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>io.lucasfrederico</groupId>
    <artifactId>tickloop-parent</artifactId>
    <version>0.2.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>tickloop (parent)</name>
    <description>
        Real-time JVM toolkit. Tick-based scheduler with main-thread safety,
        async I/O wrapper, and lock-free inter-thread messaging.
    </description>
    <url>https://github.com/lucasfrederico/tickloop</url>
    <inceptionYear>2026</inceptionYear>

    <licenses>
        <license>
            <name>MIT License</name>
            <url>https://opensource.org/licenses/MIT</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>lucasfrederico</id>
            <name>Lucas Frederico</name>
            <email>lucas.frederico@outlook.com.br</email>
        </developer>
    </developers>

    <scm>
        <url>https://github.com/lucasfrederico/tickloop</url>
        <connection>scm:git:git://github.com/lucasfrederico/tickloop.git</connection>
        <developerConnection>scm:git:ssh://git@github.com/lucasfrederico/tickloop.git</developerConnection>
    </scm>

    <modules>
        <module>tickloop-core</module>
        <module>examples/echo-game</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <!-- Java 21 LTS. v0.2.0 uses virtual threads (opt-in for offload pool). -->
        <maven.compiler.release>21</maven.compiler.release>
        <junit.version>5.11.4</junit.version>
        <jqwik.version>1.9.2</jqwik.version>
        <assertj.version>3.27.3</assertj.version>
    </properties>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.13.0</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.5.2</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>3.3.1</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <version>3.11.2</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
